# hformat

./: .travis.yml  LICENSE  README.md  hformat.cabal  nightly.yaml
src/Text/: Format.hs
src/Text/Format/: Colored.hs  Flags.hs
tests/: Test.hs
