name:                hformat
version:             0.1.0.0
synopsis:            Simple Haskell formatting
homepage:            http://github.com/mvoidex/hformat
license:             BSD3
license-file:        LICENSE
author:              Alexandr Ruchkin
maintainer:          voidex@live.com
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src
  exposed-modules:     
    Text.Format
  -- other-modules:       
  build-depends:
    base == 4.6.*,
    text == 0.11.*
